fix: 지원시에 사장 프로필에 지원한 알바생 정보 출력